Add example for extension provider.

--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -59,7 +59,7 @@
 
     <script>
         const webWallet = new app.WebWallet();
-        // const extension = new app.Extension();
+        const extension = new app.Extension();
         // const walletConnect = new app.WalletConnect();
         // const hw = new app.HW();
     </script>
