Extension provider: login with token & logout.

--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -46,8 +46,10 @@
             <div class="card-body">
                 <div>
                     <button class="btn btn-info" onclick="extension.login()">Login</button>
+                    <button class="btn btn-info" onclick="extension.loginWithToken()">Login with token</button>
                     <button class="btn btn-info" onclick="extension.signTransactions()">Sign transactions</button>
                     <button class="btn btn-info" onclick="extension.signMessage()">Sign message</button>
+                    <button class="btn btn-info" onclick="extension.logout()">Logout</button>
                 </div>
             </div>
         </div>
