--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -63,6 +63,8 @@
             <div class="card-body">
                 <div>
                     <button class="btn btn-info" onclick="walletConnect.login()">Login</button>
+                    <button class="btn btn-info" disabled="disabled" onclick="walletConnect.loginWithToken()">Login with
+                        token</button>
                     <button class="btn btn-info" onclick="walletConnect.signTransaction()">Sign transaction</button>
                     <button class="btn btn-info" onclick="walletConnect.signTransactions()">Sign transactions</button>
                     <button class="btn btn-info" disabled="disabled" onclick="walletConnect.signMessage()">Sign
@@ -89,8 +91,8 @@
                                 title="Address index" />
                         </div>
                         <div class="col-sm-3">
-                            <button class="btn btn-info btn-block" onclick="hw.login()">Login with address
-                                index</button>
+                            <button class="btn btn-info" onclick="hw.login()">Login</button>
+                            <button class="btn btn-info" onclick="hw.loginWithToken()">Login with token</button>
                         </div>
                     </div>
                     <div class="form-group row mt-2">
@@ -99,7 +101,7 @@
                                 title="Address index" />
                         </div>
                         <div class="col-sm-3">
-                            <button class="btn btn-info btn-block" onclick="hw.setAddressIndex()">Set address
+                            <button class="btn btn-info" onclick="hw.setAddressIndex()">Set address
                                 index</button>
                         </div>
                     </div>
