Example for token signature verification.

--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -31,6 +31,7 @@
 
                     <button class="btn btn-info" onclick="webWallet.showAddress()">Show address</button>
                     <button class="btn btn-info" onclick="webWallet.showTokenSignature()">Show token signature</button>
+                    <button class="btn btn-info" onclick="webWallet.validateTokenSignature()">Validate token signature</button>
                     <button class="btn btn-info" onclick="webWallet.showSignedTransactions()">Show signed
                         transactions</button>
                 </div>
