--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -31,7 +31,8 @@
 
                     <button class="btn btn-info" onclick="webWallet.showAddress()">Show address</button>
                     <button class="btn btn-info" onclick="webWallet.showTokenSignature()">Show token signature</button>
-                    <button class="btn btn-info" onclick="webWallet.validateTokenSignature()">Validate token signature</button>
+                    <button class="btn btn-info" onclick="webWallet.validateTokenSignature()">Validate token
+                        signature</button>
                     <button class="btn btn-info" onclick="webWallet.showSignedTransactions()">Show signed
                         transactions</button>
                 </div>
@@ -71,6 +72,24 @@
                     <button class="btn btn-info" disabled="disabled" onclick="walletConnect.signMessage()">Sign
                         message</button>
                     <button class="btn btn-info" onclick="walletConnect.logout()">Logout</button>
+                </div>
+            </div>
+            <div class="modal" id="MyWalletConnectModal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Connect using Maiar on your phone</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+
+                        <div class="modal-body">
+                            <div id="WalletConnectQRContainer"></div>
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -117,6 +136,16 @@
             </div>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
     <script src="./out/app.js"></script>
 
