add opera provider example

--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -59,6 +59,23 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
+                    <h3>Opera (Opera Crypto Wallet)</h3>
+                </div>
+            </div>
+            <div class="card-body">
+                <div>
+                    <button class="btn btn-info" onclick="opera.login()">Login</button>
+                    <button class="btn btn-info" onclick="opera.loginWithToken()">Login with token</button>
+                    <button class="btn btn-info" onclick="opera.signTransactions()">Sign transactions</button>
+                    <button class="btn btn-info" onclick="opera.signMessage()">Sign message</button>
+                    <button class="btn btn-info" onclick="opera.logout()">Logout</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="card mt-3 mb-3">
+            <div class="card-header">
+                <div class="card-title">
                     <h3>Wallet Connect</h3>
                 </div>
             </div>
@@ -152,6 +169,7 @@
     <script>
         const webWallet = new app.WebWallet();
         const extension = new app.Extension();
+        const opera = new app.Opera();
         const walletConnect = new app.WalletConnect();
         const hw = new app.HW();
     </script>
