--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -56,10 +56,48 @@
             </div>
         </div>
 
+         <div class="card mt-3 mb-3">
+            <div class="card-header">
+                <div class="card-title">
+                    <h3>Wallet Connect V2 ( xPortal )</h3>
+                </div>
+            </div>
+            <div class="card-body">
+                <div>
+                    <button class="btn btn-info" onclick="walletConnectV2.login()">Login</button>
+                    <button class="btn btn-info" onclick="walletConnectV2.loginWithToken()">Login with
+                        token</button>
+                    <button class="btn btn-info" onclick="walletConnectV2.signTransaction()">Sign transaction</button>
+                    <button class="btn btn-info" onclick="walletConnectV2.signTransactions()">Sign transactions</button>
+                    <button class="btn btn-info" onclick="walletConnectV2.signMessage()">Sign
+                        message</button>
+                    <button class="btn btn-info" onclick="walletConnectV2.logout()">Logout</button>
+                </div>
+            </div>
+            <div class="modal" id="MyWalletConnectV2Modal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Connect using xPortal on your phone</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+
+                        <div class="modal-body">
+                            <div id="MyWalletConnectV2QRContainer"></div>
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Wallet Connect</h3>
+                    <h3>Wallet Connect ( Maiar )</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -84,44 +122,6 @@
 
                         <div class="modal-body">
                             <div id="MyWalletConnectQRContainer"></div>
-                        </div>
-
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-         <div class="card mt-3 mb-3">
-            <div class="card-header">
-                <div class="card-title">
-                    <h3>Wallet Connect V2</h3>
-                </div>
-            </div>
-            <div class="card-body">
-                <div>
-                    <button class="btn btn-info" onclick="walletConnectV2.login()">Login</button>
-                    <button class="btn btn-info" disabled="disabled" onclick="walletConnectV2.loginWithToken()">Login with
-                        token</button>
-                    <button class="btn btn-info" onclick="walletConnectV2.signTransaction()">Sign transaction</button>
-                    <button class="btn btn-info" onclick="walletConnectV2.signTransactions()">Sign transactions</button>
-                    <button class="btn btn-info" onclick="walletConnectV2.signMessage()">Sign
-                        message</button>
-                    <button class="btn btn-info" onclick="walletConnectV2.logout()">Logout</button>
-                </div>
-            </div>
-            <div class="modal" id="MyWalletConnectV2Modal">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Connect using Maiar on your phone</h4>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        </div>
-
-                        <div class="modal-body">
-                            <div id="MyWalletConnectV2QRContainer"></div>
                         </div>
 
                         <div class="modal-footer">
