Sign message (web wallet).

--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -22,7 +22,7 @@
                     <button class="btn btn-info" onclick="webWallet.login()">Login</button>
                     <button class="btn btn-info" onclick="webWallet.loginWithToken()">Login with token</button>
                     <button class="btn btn-info" onclick="webWallet.signTransactions()">Sign transactions</button>
-                    <button class="btn btn-info" disabled="disabled" onclick="webWallet.signMessage()">Sign
+                    <button class="btn btn-info" onclick="webWallet.signMessage()">Sign
                         message</button>
                     <button class="btn btn-info" onclick="webWallet.logout()">Logout</button>
                 </div>
@@ -35,6 +35,8 @@
                         signature</button>
                     <button class="btn btn-info" onclick="webWallet.showSignedTransactions()">Show signed
                         transactions</button>
+                    <button class="btn btn-info" onclick="webWallet.showSignedMessage()">Show signed
+                        message</button>
                 </div>
             </div>
         </div>
@@ -42,7 +44,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Extension (Maiar DeFi Wallet)</h3>
+                    <h3>Extension (MultiversX DeFi Wallet)</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -56,10 +58,10 @@
             </div>
         </div>
 
-         <div class="card mt-3 mb-3">
+        <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Wallet Connect V2 ( xPortal )</h3>
+                    <h3>Wallet Connect V2 (xPortal)</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -97,7 +99,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Wallet Connect ( Maiar )</h3>
+                    <h3>Wallet Connect (xPortal)</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -116,7 +118,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Connect using Maiar on your phone</h4>
+                            <h4 class="modal-title">Connect using xPortal on your phone</h4>
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
 
