Fix after self-review.

--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -36,8 +36,8 @@
                         signature</button>
                     <button class="btn btn-info" onclick="webWallet.showSignedTransactions()">Show signed
                         transactions</button>
-                    <button class="btn btn-info" onclick="webWallet.showSignedMessage()">Show signed
-                        message</button>
+                    <button class="btn btn-info" onclick="webWallet.showMessageSignature()">Show message
+                        signature</button>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Wallet Connect V2 (xPortal)</h3>
+                    <h3>Wallet Connect V2 ( xPortal )</h3>
                 </div>
             </div>
             <div class="card-body">
