--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -120,7 +120,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Connect using xPortal on your phone</h4>
+                            <h4 class="modal-title">Connect using Maiar on your phone</h4>
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
 
