--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -170,6 +170,8 @@
 
                     <div>
                         <button class="btn btn-info" onclick="hw.signTransaction()">Sign transaction</button>
+                        <button class="btn btn-info" onclick="hw.signGuardedTransaction()">Sign guarded
+                            transaction</button>
                         <button class="btn btn-info" onclick="hw.signTransactions()">Sign transactions</button>
                         <button class="btn btn-info" onclick="hw.signMessage()">Sign
                             message</button>
