Use webpack instead of browserify. Reference newer HW provider.

--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -156,10 +156,10 @@
     <script src="./out/app.js"></script>
 
     <script>
-        const webWallet = new app.WebWallet();
-        const extension = new app.Extension();        
-        const walletConnectV2 = new app.WalletConnectV2();
-        const hw = new app.HW();
+        const webWallet = new WebWallet();
+        const extension = new Extension();
+        const walletConnectV2 = new WalletConnectV2();
+        const hw = new HW();
     </script>
 </body>
 
