--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -132,11 +132,13 @@
 
                     <div>
                         <button class="btn btn-info" onclick="hw.signTransaction()">Sign transaction</button>
-                        <button class="btn btn-info" onclick="hw.signGuardedTransaction()">Sign guarded
-                            transaction</button>
                         <button class="btn btn-info" onclick="hw.signTransactions()">Sign transactions</button>
                         <button class="btn btn-info" onclick="hw.signMessage()">Sign
                             message</button>
+                    </div>
+                    <div class="mt-2">
+                        <button class="btn btn-info" onclick="hw.showSignedTransactionsWhenGuarded()">Show completely
+                            signed transactions (when guarded)</button>
                     </div>
                 </div>
             </div>
