--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -199,7 +199,6 @@
 
         const webviewChild = document.getElementById("webviewChild");
         const targetWindow = webviewChild.contentWindow;
-
         window.addEventListener("message", async e => {
             const { type, payload } = e.data;
 
@@ -207,6 +206,8 @@
                 case "LOGIN_REQUEST":
                     await extension.login();
 
+                    // get address after login
+                    const address = "erd1qyu5wthldzr8wx5c9ucg8kjagg0jfs53s8nr3zpz3hypefsdd8ssycr6th";
                     // generate accessToken using native auth client
                     const accessToken = "ZXJkMXdqeXRmbjZ6aHFmY3NlanZod3Y3cTR1c2F6czVyeWMzajhoYzc4ZmxkZ2pueWN0OHdlanFrYXN1bmM.Ykc5allXeG9iM04wLmY2ODE3NzUxMDc1NmVkY2U0NWVjYTg0Yjk0NTQ0YTZlYWNkZmEzNmU2OWRmZDNiOGYyNGM0MDEwZDE5OTA3NTEuMzAwLmV5SjBhVzFsYzNSaGJYQWlPakUyTnpNNU56SXlORFI5.a29dba3f0d2fb4712cb662bc8050c87bf9f0e7fd28f3c98efe0fda074be5b087bd75c075243e832c2985a9da044496b2cff3c852c8c963f9d3d840aed8799c07";
 
@@ -214,7 +215,7 @@
                         type: "LOGIN_RESPONSE",
                         payload: {
                             data: {
-                                address: "erd1qyu5wthldzr8wx5c9ucg8kjagg0jfs53s8nr3zpz3hypefsdd8ssycr6th",
+                                address,
                                 accessToken
                             }
                         },
@@ -223,9 +224,8 @@
                 case "SIGN_TRANSACTIONS_REQUEST":
                     console.log('transactions', payload)
 
-                    // Normally, the payload should be sent to the signing provider
+                    // Normally, the `payload` (the transactions to be signed) should be sent to the signing provider
                     const signedTransactions = await extension.signTransactions();
-                    console.log('signedTransactions', signedTransactions);
 
                     targetWindow?.postMessage({
                         type: "SIGN_TRANSACTIONS_RESPONSE",
@@ -239,7 +239,7 @@
 
                     await extension.signMessage(messageToSign);
 
-                    // Normally, the signature should be extracted from the signing provider response
+                    // Extract the signature from the signing provider response
                     const signature = "1b7e8842c9f9716af4ca06ca0c4893e15b54489d0310ff829f5d42cbba44ce651d30d0c67e48c8d4347b57b3c28f973540db113122d928a852d00ed90e005c02";
 
                     targetWindow?.postMessage({
