--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -176,7 +176,7 @@
         </div>
     </div>
 
-    <iframe id="webviewChild" src="http://localhost:63342/mx-sdk-js-examples/signing-providers/webviewChild.html" style="width: 100%; height: 200px;"></iframe>
+    <iframe id="webviewChild" src="./webviewChild.html" style="width: 100%; height: 200px;"></iframe>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
