--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -64,6 +64,25 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
+                    <h3>Metamask</h3>
+                </div>
+            </div>
+            <div class="card-body">
+                <div>
+                    <button class="btn btn-info" onclick="metamask.login()">Login</button>
+                    <button class="btn btn-info" onclick="metamask.loginWithToken()">Login with token</button>
+                    <button class="btn btn-info" onclick="metamask.signTransaction()">Sign transaction</button>
+                    <button class="btn btn-info" onclick="metamask.signTransactions()">Sign transactions</button>
+                    <button class="btn btn-info" onclick="metamask.signMessage()">Sign
+                        message</button>
+                    <button class="btn btn-info" onclick="metamask.logout()">Logout</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="card mt-3 mb-3">
+            <div class="card-header">
+                <div class="card-title">
                     <h3>xAlias</h3>
                 </div>
             </div>
@@ -214,6 +233,7 @@
         const xAlias = new XAlias();
         const extension = new Extension();
         const walletConnectV2 = new WalletConnectV2();
+        const metamask = new Metamask();
         const hw = new HW();
 
         const webviewChild = document.getElementById("webviewChild");
@@ -224,64 +244,64 @@
         /**
          * NOTE: The following event listener must be commented out in order for **crossWindowWallet** to work
          */
-        window.addEventListener("message", async e => {
-            const { type, payload } = e.data;
+    //     window.addEventListener("message", async e => {
+    //         const { type, payload } = e.data;
 
-            switch (type) {
-                case "LOGIN_REQUEST":
-                    await extension.login();
+    //         switch (type) {
+    //             case "LOGIN_REQUEST":
+    //                 await extension.login();
 
-                    // get address after login
-                    const address = "erd1qyu5wthldzr8wx5c9ucg8kjagg0jfs53s8nr3zpz3hypefsdd8ssycr6th";
-                    // generate accessToken using native auth client
-                    const accessToken = "ZXJkMXdqeXRmbjZ6aHFmY3NlanZod3Y3cTR1c2F6czVyeWMzajhoYzc4ZmxkZ2pueWN0OHdlanFrYXN1bmM.Ykc5allXeG9iM04wLmY2ODE3NzUxMDc1NmVkY2U0NWVjYTg0Yjk0NTQ0YTZlYWNkZmEzNmU2OWRmZDNiOGYyNGM0MDEwZDE5OTA3NTEuMzAwLmV5SjBhVzFsYzNSaGJYQWlPakUyTnpNNU56SXlORFI5.a29dba3f0d2fb4712cb662bc8050c87bf9f0e7fd28f3c98efe0fda074be5b087bd75c075243e832c2985a9da044496b2cff3c852c8c963f9d3d840aed8799c07";
+    //                 // get address after login
+    //                 const address = "erd1qyu5wthldzr8wx5c9ucg8kjagg0jfs53s8nr3zpz3hypefsdd8ssycr6th";
+    //                 // generate accessToken using native auth client
+    //                 const accessToken = "ZXJkMXdqeXRmbjZ6aHFmY3NlanZod3Y3cTR1c2F6czVyeWMzajhoYzc4ZmxkZ2pueWN0OHdlanFrYXN1bmM.Ykc5allXeG9iM04wLmY2ODE3NzUxMDc1NmVkY2U0NWVjYTg0Yjk0NTQ0YTZlYWNkZmEzNmU2OWRmZDNiOGYyNGM0MDEwZDE5OTA3NTEuMzAwLmV5SjBhVzFsYzNSaGJYQWlPakUyTnpNNU56SXlORFI5.a29dba3f0d2fb4712cb662bc8050c87bf9f0e7fd28f3c98efe0fda074be5b087bd75c075243e832c2985a9da044496b2cff3c852c8c963f9d3d840aed8799c07";
 
-                    targetWindow?.postMessage({
-                        type: "LOGIN_RESPONSE",
-                        payload: {
-                            data: {
-                                address,
-                                accessToken
-                            }
-                        },
-                    })
-                    break;
-                case "SIGN_TRANSACTIONS_REQUEST":
-                    console.log('transactions', payload)
+    //                 targetWindow?.postMessage({
+    //                     type: "LOGIN_RESPONSE",
+    //                     payload: {
+    //                         data: {
+    //                             address,
+    //                             accessToken
+    //                         }
+    //                     },
+    //                 })
+    //                 break;
+    //             case "SIGN_TRANSACTIONS_REQUEST":
+    //                 console.log('transactions', payload)
 
-                    // Normally, the `payload` (the transactions to be signed) should be sent to the signing provider
-                    const signedTransactions = await extension.signTransactions();
+    //                 // Normally, the `payload` (the transactions to be signed) should be sent to the signing provider
+    //                 const signedTransactions = await extension.signTransactions();
 
-                    targetWindow?.postMessage({
-                        type: "SIGN_TRANSACTIONS_RESPONSE",
-                        payload: {
-                            data: signedTransactions
-                        },
-                    })
-                    break;
-                case "SIGN_MESSAGE_REQUEST":
-                    const messageToSign = payload?.message;
+    //                 targetWindow?.postMessage({
+    //                     type: "SIGN_TRANSACTIONS_RESPONSE",
+    //                     payload: {
+    //                         data: signedTransactions
+    //                     },
+    //                 })
+    //                 break;
+    //             case "SIGN_MESSAGE_REQUEST":
+    //                 const messageToSign = payload?.message;
 
-                    await extension.signMessage(messageToSign);
+    //                 await extension.signMessage(messageToSign);
 
-                    // Extract the signature from the signing provider response
-                    const signature = "1b7e8842c9f9716af4ca06ca0c4893e15b54489d0310ff829f5d42cbba44ce651d30d0c67e48c8d4347b57b3c28f973540db113122d928a852d00ed90e005c02";
+    //                 // Extract the signature from the signing provider response
+    //                 const signature = "1b7e8842c9f9716af4ca06ca0c4893e15b54489d0310ff829f5d42cbba44ce651d30d0c67e48c8d4347b57b3c28f973540db113122d928a852d00ed90e005c02";
 
-                    targetWindow?.postMessage({
-                        type: "SIGN_MESSAGE_RESPONSE",
-                        payload: {
-                            data: {
-                                signature,
-                                status: "signed"
-                            }
-                        },
-                    })
-                    break;
-                default:
-                    // handle other message types
-                    break;
-            }
-        })
+    //                 targetWindow?.postMessage({
+    //                     type: "SIGN_MESSAGE_RESPONSE",
+    //                     payload: {
+    //                         data: {
+    //                             signature,
+    //                             status: "signed"
+    //                         }
+    //                     },
+    //                 })
+    //                 break;
+    //             default:
+    //                 // handle other message types
+    //                 break;
+    //         }
+    //     })
     </script>
 </body>
 
