--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -14,7 +14,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Web Wallet</h3>
+                    <h3>[🌐] Web Wallet URL</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -45,7 +45,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Web Wallet Cross-Window</h3>
+                    <h3>[🗂️] Web Wallet Cross-Window</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -64,8 +64,8 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Metamask</h3>
-                </div>
+                    <h3>[🦊] Metamask</h3>
+                    <p style="display: inline;"><b>NOTE:</b> use <u><b><pre style="display: inline;">localhost:8080</pre></b></u> to connect</p>                </div>
             </div>
             <div class="card-body">
                 <div>
@@ -83,7 +83,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>xAlias</h3>
+                    <h3>[﹫] xAlias</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -114,7 +114,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Extension (MultiversX DeFi Wallet)</h3>
+                    <h3>[🧩] Extension (MultiversX DeFi Wallet)</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -132,7 +132,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Wallet Connect V2 ( xPortal )</h3>
+                    <h3>[📱] Wallet Connect V2 ( xPortal )</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -170,7 +170,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-header">
                 <div class="card-title">
-                    <h3>Hardware Wallet</h3>
+                    <h3>[𝍍] Hardware Wallet</h3>
                 </div>
             </div>
             <div class="card-body">
