--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -54,6 +54,7 @@
                     <button class="btn btn-info" onclick="crossWindowWallet.loginWithToken()">Login with token</button>
                     <button class="btn btn-info" onclick="crossWindowWallet.signTransaction()">Sign transaction</button>
                     <button class="btn btn-info" onclick="crossWindowWallet.signTransactions()">Sign transactions</button>
+                    <button class="btn btn-info" onclick="crossWindowWallet.signRelayedTransaction()">Sign relayed transaction</button>
                     <button class="btn btn-info" onclick="crossWindowWallet.signMessage()">Sign
                         message</button>
                     <button class="btn btn-info" onclick="crossWindowWallet.logout()">Logout</button>
