--- a/signing-providers/iframe-wallet.html
+++ b/signing-providers/iframe-wallet.html
@@ -37,7 +37,10 @@
     <script src="../out/app.js"></script>
 
     <script>
-        const iframeWallet = new IframeWallet();
+        let iframeWallet;
+        document.addEventListener("DOMContentLoaded", () => {
+            iframeWallet = new IframeWallet();
+        });
     </script>
 </body>
 
