Sign message working

--- a/signing-providers/index.html
+++ b/signing-providers/index.html
@@ -229,12 +229,10 @@
         <div class="card-body">
             <div>
                 <button class="btn btn-info" onclick="iframeCommunication.login()">Iframe Login</button>
-                <!-- <button class="btn btn-info" onclick="metamask.loginWithToken()">Login with token</button>
-                <button class="btn btn-info" onclick="metamask.signTransaction()">Sign transaction</button>
-                <button class="btn btn-info" onclick="metamask.signTransactions()">Sign transactions</button>
-                <button class="btn btn-info" onclick="metamask.signMessage()">Sign
-                    message</button>
-                <button class="btn btn-info" onclick="metamask.logout()">Logout</button> -->
+                <button class="btn btn-info" onclick="iframeCommunication.signTransaction()">Sign transaction</button>
+                <button class="btn btn-info" onclick="iframeCommunication.signTransactions()">Sign transactions</button>
+                <button class="btn btn-info" onclick="iframeCommunication.signMessage()">Sign message</button>
+                <button class="btn btn-info" onclick="iframeCommunication.logout()">Logout</button>
             </div>
         </div>
     </div>
